--- a/reports/bitcoin_distribution_addr_tables.html
+++ b/reports/bitcoin_distribution_addr_tables.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container mt-3">
       <h2>Bitcoin Address Distribution</h2>
-      <p>Friday 08 March 2024.  Daily update</p>            
+      <p>Saturday 09 March 2024.  Daily update</p>            
       <table border="1" class="dataframe table table-striped align-left table-responsive text-start">
   <thead>
     <tr style="text-align: left;">
@@ -34,85 +34,85 @@
       <td>Humpback</td>
       <td>&gt;10K BTC</td>
       <td>111</td>
-      <td>110</td>
-      <td>1</td>
+      <td>111</td>
+      <td>0</td>
       <td>2</td>
       <td>0</td>
       <td>6.0</td>
-      <td class="bg-warning">-5</td>
-      <td class="bg-warning">-4.310</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Whale</td>
       <td>1K-10K BTC</td>
+      <td>1991</td>
       <td>1994</td>
-      <td>1992</td>
-      <td>2</td>
-      <td>13</td>
-      <td>38</td>
-      <td>75.0</td>
-      <td>95</td>
-      <td>5.003</td>
+      <td class="bg-warning">-3</td>
+      <td>7</td>
+      <td>34</td>
+      <td>72.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shark</td>
       <td>100-1K BTC</td>
+      <td>13766</td>
       <td>13747</td>
-      <td>13745</td>
-      <td>2</td>
-      <td class="bg-warning">-6</td>
-      <td>62</td>
-      <td class="bg-warning">-208.0</td>
-      <td class="bg-warning">-270</td>
-      <td class="bg-warning">-1.926</td>
+      <td>19</td>
+      <td class="bg-warning">-9</td>
+      <td>78</td>
+      <td class="bg-warning">-179.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Fish</td>
       <td>10-100 BTC</td>
+      <td>137446</td>
       <td>137574</td>
-      <td>137699</td>
-      <td class="bg-warning">-125</td>
-      <td class="bg-warning">-691</td>
-      <td class="bg-warning">-1085</td>
-      <td class="bg-warning">-1643.0</td>
-      <td class="bg-warning">-2005</td>
-      <td class="bg-warning">-1.436</td>
+      <td class="bg-warning">-128</td>
+      <td class="bg-warning">-657</td>
+      <td class="bg-warning">-1188</td>
+      <td class="bg-warning">-1778.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Crab</td>
       <td>1-10 BTC</td>
+      <td>858753</td>
       <td>859093</td>
-      <td>859992</td>
-      <td class="bg-warning">-899</td>
-      <td class="bg-warning">-3591</td>
-      <td class="bg-warning">-6083</td>
-      <td class="bg-warning">-5824.0</td>
-      <td>30196</td>
-      <td>3.643</td>
+      <td class="bg-warning">-340</td>
+      <td class="bg-warning">-3330</td>
+      <td class="bg-warning">-6777</td>
+      <td class="bg-warning">-6364.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shrimp</td>
       <td>&lt;1 BTC</td>
+      <td>51722566</td>
       <td>51656197</td>
-      <td>51674769</td>
-      <td class="bg-warning">-18572</td>
-      <td>173696</td>
-      <td>205667</td>
-      <td>1325088.0</td>
-      <td>7816725</td>
-      <td>17.830</td>
+      <td>66369</td>
+      <td>201313</td>
+      <td>307072</td>
+      <td>1321956.0</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Total</td>
       <td></td>
-      <td>52668716</td>
-      <td>52625689</td>
-      <td class="bg-warning">-19591</td>
-      <td>169423</td>
-      <td>198599</td>
+      <td>52734633</td>
+      <td>52688307</td>
+      <td>65917</td>
+      <td>197326</td>
+      <td>299219</td>
       <td>NaN</td>
-      <td>334888</td>
-      <td>18.804</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
   </tbody>
 </table>
