--- a/reports/bitcoin_distribution_coins_tables.html
+++ b/reports/bitcoin_distribution_coins_tables.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container mt-3">
       <h2>Bitcoin Coin Distribution</h2>
-      <p>Friday 08 March 2024.  Daily update</p>            
+      <p>Saturday 09 March 2024.  Daily update</p>            
       <table border="1" class="dataframe table table-striped align-left table-responsive text-start">
   <thead>
     <tr style="text-align: left;">
@@ -33,86 +33,86 @@
     <tr>
       <td>Humpback</td>
       <td>&gt;10K BTC</td>
+      <td>3008360</td>
       <td>3021522</td>
-      <td>3013200</td>
-      <td>8322</td>
-      <td>23419</td>
-      <td class="bg-warning">-39936</td>
-      <td>93161</td>
-      <td class="bg-warning">-1997</td>
-      <td class="bg-warning">-0.066</td>
+      <td class="bg-warning">-13162</td>
+      <td>14964</td>
+      <td class="bg-warning">-47966</td>
+      <td>78461</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Whale</td>
       <td>1K-10K BTC</td>
+      <td>4890638</td>
       <td>4876867</td>
-      <td>4882225</td>
-      <td class="bg-warning">-5358</td>
-      <td>8467</td>
-      <td>62585</td>
-      <td>142601</td>
-      <td>299763</td>
-      <td>6.549</td>
+      <td>13771</td>
+      <td>20047</td>
+      <td>70601</td>
+      <td>157436</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shark</td>
       <td>100-1K BTC</td>
+      <td>3836870</td>
       <td>3832671</td>
-      <td>3828280</td>
-      <td>4391</td>
-      <td>4275</td>
-      <td>58942</td>
-      <td class="bg-warning">-78801</td>
-      <td class="bg-warning">-71949</td>
-      <td class="bg-warning">-1.843</td>
+      <td>4199</td>
+      <td class="bg-warning">-1239</td>
+      <td>62706</td>
+      <td class="bg-warning">-74395</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Fish</td>
       <td>10-100 BTC</td>
+      <td>4368503</td>
       <td>4371755</td>
-      <td>4374403</td>
-      <td class="bg-warning">-2648</td>
-      <td class="bg-warning">-17322</td>
-      <td class="bg-warning">-30227</td>
-      <td class="bg-warning">-55057</td>
-      <td class="bg-warning">-55903</td>
-      <td class="bg-warning">-1.263</td>
+      <td class="bg-warning">-3252</td>
+      <td class="bg-warning">-15259</td>
+      <td class="bg-warning">-33326</td>
+      <td class="bg-warning">-58276</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Crab</td>
       <td>1-10 BTC</td>
+      <td>2132113</td>
       <td>2132937</td>
-      <td>2134774</td>
-      <td class="bg-warning">-1837</td>
-      <td class="bg-warning">-9089</td>
-      <td class="bg-warning">-15863</td>
-      <td class="bg-warning">-16620</td>
-      <td>61886</td>
-      <td>2.988</td>
+      <td class="bg-warning">-824</td>
+      <td class="bg-warning">-9042</td>
+      <td class="bg-warning">-16992</td>
+      <td class="bg-warning">-17887</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Shrimp</td>
       <td>&lt;1 BTC</td>
+      <td>1409572</td>
       <td>1409361</td>
-      <td>1411048</td>
-      <td class="bg-warning">-1687</td>
-      <td class="bg-warning">-3163</td>
-      <td class="bg-warning">-8120</td>
-      <td class="bg-warning">-2952</td>
-      <td>103088</td>
-      <td>7.892</td>
+      <td>211</td>
+      <td class="bg-warning">-2890</td>
+      <td class="bg-warning">-7704</td>
+      <td class="bg-warning">-2957</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
     <tr>
       <td>Total</td>
       <td></td>
-      <td>19645113</td>
-      <td>19643101</td>
-      <td>1183</td>
-      <td>6587</td>
-      <td>27381</td>
-      <td>1317494</td>
-      <td>334888</td>
-      <td>14.257</td>
+      <td>19646056</td>
+      <td>19643930</td>
+      <td>943</td>
+      <td>6581</td>
+      <td>27319</td>
+      <td>1313713</td>
+      <td>None</td>
+      <td>None</td>
     </tr>
   </tbody>
 </table>
