--- a/graphics/m2.html
+++ b/graphics/m2.html
@@ -135,7 +135,7 @@
                 enabled:false,
             },
             credits: {
-                text: 'Power by BGeometrics.com',
+                text: 'Source: fred.stlouisfed.org &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Power by BGeometrics.com',
                 href: 'https://charts.bgeometrics.com',
                 style: {
                     font: '11px sans-serif, Verdana, "Trebuchet MS"'
