--- a/graphics/m2_dark.html
+++ b/graphics/m2_dark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>M2 Money Stock FRED</title>
+    <title>M2 Money Stock Growth FRED (Federal Reserve Economic Data)</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -77,7 +77,7 @@
                 }
             },
             title: {
-                text: 'M2 Money Stock FRED',
+                text: 'M2 Growth (Billions of Dollars)',
                 align: 'left',
             },
 
@@ -106,7 +106,7 @@
 
             yAxis: [{
                 title: {
-                    text: 'M2 (Billions of Dollars)'
+                    text: 'M2 Growth (Billions of Dollars)'
                 },
             }, {
                 title: {
