--- a/tools/web-generation-end-m2.html
+++ b/tools/web-generation-end-m2.html
@@ -14,6 +14,8 @@
 	  The M2 is a metric that economists and economic policy makers use to monitor the amount of money available in the economy and to understand liquidity conditions.
           <br><br>
 	  Control of the money supply is a key tool used by central banks to influence economic conditions, such as inflation and economic growth.
+          <br><br>
+	  The graph shows the growth of M2 by subtracting the value of the current month from the previous month.
         </p>
       </div>
 
