--- a/tools/web-generation-end-m2.html
+++ b/tools/web-generation-end-m2.html
@@ -16,6 +16,8 @@
 	  Control of the money supply is a key tool used by central banks to influence economic conditions, such as inflation and economic growth.
           <br><br>
 	  The graph shows the growth of M2 by subtracting the value of the current month from the previous month.
+          <br><br>
+	  Data is taken from <a href='https://fred.stlouisfed.org/series/M2SL'>fred.stlouisfed.org</a>
         </p>
       </div>
 
