--- a/m2_dark.html
+++ b/m2_dark.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="M2 Money Stock" name="keywords">
+  <meta content="Bitcoin and M2 Money Stock" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -501,7 +501,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="600px" src="graphics/m2_dark.html" allow="fullscreen" title="M2 Money Stock" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="600px" src="graphics/m2_dark.html" allow="fullscreen" title="Bitcoin and M2 Money Stock" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
 
