--- a/graphics/ohlc_1m.html
+++ b/graphics/ohlc_1m.html
@@ -135,7 +135,22 @@
         ]
         }
         */
-    }]
+    }], 
+
+            credits: {
+                text: 'Power by BGeometrics.com',
+                href: 'https://charts.bgeometrics.com',
+                style: {
+                    font: '11px sans-serif, Verdana, "Trebuchet MS"'
+                },
+                position: {
+                    align: 'right',
+                    x: -70,
+                    y: -124
+                }                
+            },
+
+
     });   
 
     let binanceSocket = new WebSocket("wss://stream.binance.com:9443/ws/btcusdt@kline_1m  ");
