--- a/graphics/etf_dark.html
+++ b/graphics/etf_dark.html
@@ -21,6 +21,8 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
+    <script src="https://charts.bgeometrics.com/assets/js/themes/brand-dark.js"></script>
+
     <div id="container-iframe" style="width:100%; height:600px; margin: 0 auto;"></div>
 
     <script>
@@ -87,7 +89,7 @@
                 events: {
                     load: function() {
                         var image = new Image();
-                        var adresse_image = "https://charts.bgeometrics.com/assets/img/BGeometrics_logo.png";
+                        var adresse_image = "https://charts.bgeometrics.com/assets/img/BGeometrics_logo_write.png";
                         image.src = adresse_image;
 
                         var height_image = 128;
@@ -126,7 +128,7 @@
 
             series: [{
                 name: 'BTC price',
-                color: 'black',
+                color: 'white',
                 data: data_price,
                 tooltip: {
                     valueDecimals: 2
