--- a/etf.html
+++ b/etf.html
@@ -548,6 +548,20 @@
 
       </div>
     </section>
+  <br>
+
+  
+    <section>
+      <div class="container">
+        <a href="graphics/fedfunds.html">
+          <h5>Bitcoin ETF</h5>
+        </a>
+        <p> 
+	Los flujos diarios de Bitcoin Spot ETF, BlackRock (IBIT), The Grayscale Bitcoin Trust (GBTC), Fidelity (FBTC), Ark Invest /21Shares (ARKB), Bitwise (BitB), Franklin (EZBC), InvestCo /Galaxy (BTCO ), Vaneck (Hodl), Valkyrie (BRR) y WisdomTree (BTCW).
+	</p>
+
+      </div>
+    </section>
 
   </main><!-- End #main -->
 
@@ -574,13 +588,10 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/chart.js/chart.umd.js"></script>
-  <script src="assets/vendor/echarts/echarts.min.js"></script>
-  <script src="assets/vendor/quill/quill.min.js"></script>
-  <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/bgeometrics.js"></script>
