--- a/sp500_gold.html
+++ b/sp500_gold.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="BTC S&P 500 Gold Tesla" name="keywords">
+  <meta content="BTC S&P 500 Gold Tesla MicroStrategy" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -539,13 +539,79 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="600px" src="graphics/sp500_gold.html" allow="fullscreen" title="BTC S&P 500 Gold Tesla" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="600px" src="graphics/sp500_gold.html" allow="fullscreen" title="BTC S&P 500 Gold Tesla MicroStrategy" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
 
           </div>
         </div><!-- End Left side columns -->
 
+      </div>
+    </section>
+  <br>
+  
+    <section>
+      <div class="container">
+        <a href="graphics/hodl_waves.html">
+          <h5>BTC, S&P 500, Gold, Tesla and MicroStrategy</h5>
+        </a>
+        <p> 
+	  Comparison of prices since 2015 of bitcoin, S&P 500, gold, Tesla and MicroStratety.
+        </p>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li>
+                <strong>Bitcoin</strong>
+                <p>
+		  BTC is the financial asset with the best performance in the last 10 years.
+                </p>
+              </li>
+              <li>
+                <strong>S&P 500</strong>
+                <p>
+		 The S&P 500, an index comprised of 500 of the largest U.S. companies weighted by market capitalization, is a critical benchmark for investors around the world. The performance of the S&P 500 reflects the overall health of the stock market and economic conditions in the United States.<p> 
+		 <br>
+		 The S&P 500 throughout its history averages approximately a 10% annual gain.
+		 <br>
+		 To date, bitcoin has a high correlation with the S&P 500 index.
+                </p>
+	      </li>
+              <li>
+                <strong>Gold</strong>
+                <p>
+		  Gold is the historical store of value.
+		  <br>
+	          Gold has long been a safe haven in times of economic uncertainty and market volatility. Its inherent value, durability, and relative scarcity have made it a desired asset throughout history.
+                </p>
+	      </li>
+              <li>
+                <strong>Tesla</strong>
+                <p>
+		  Tesla is the disruption in the automotive sector.
+		  <br>
+		  Its focus on electric vehicles, renewable energy and battery technology has captured the attention of investors and consumers alike.
+                </p>
+	      </li>
+              <li>
+                <strong>MicroStrategy</strong>
+                <p>
+		  MicroStrategy bets on bitcoin.
+                  <br>
+		  It is a business intelligence company, it has adopted a strategy of converting a significant part of its treasury into Bitcoin.
+                </p>
+	      </li>
+              <li>
+                <strong>In conclusion</strong>
+                <p>
+		  Bitcoin, the S&P 500, gold, Tesla and MicroStrategy represent a wide range of assets with different risk profiles and return potential. While all of these assets have experienced price fluctuations, their fundamental drivers and role in investment portfolios are different.
+                </p>
+	      </li>
+	    </ul>
+	  </div>
+	</div>
+        
       </div>
     </section>
 
