--- a/tools/web-generation-model-donation-end.html
+++ b/tools/web-generation-model-donation-end.html
@@ -7,13 +7,15 @@
         <div class="col-xl-6">
 
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
               <div class="info-box card">
                 <i class="bi bi-envelope"></i>
-                <h3>Donation Lightning Network</h3>
+                <h3>Donation with Lightning Network</h3>
                 <p>lnurl1dp68gurn8ghj7ampd3kx2ar0veekzar0wd5xjtnrdakj7tnhv4kxctttdehhwm30d3h82unvwqhkyem9dakk2arjd93hx2sg3sm</p>
-                <p>Wallets support: Wallet Of Satoshi, Blink, Strike, CoinCorner, Alby, Nicehash, Stacker News...</p>
-		<p><a href='https://lightningaddress.com/#providers'>Providers lnd address</a></p>
+                <p>
+		  Wallets support: Wallet Of Satoshi, Blink, Strike, CoinCorner, Alby, Nicehash, Stacker News...&nbsp;
+		  <a href='https://lightningaddress.com/#providers'>Providers lnd address</a>
+		</p>
               </div>
             </div>
           </div>
