--- a/tools/web-generation-model-donation-end.html
+++ b/tools/web-generation-model-donation-end.html
@@ -17,7 +17,7 @@
 		              <a href='https://lightningaddress.com/#providers'>Providers lnd address</a>
 		            </p>
                 <p>
-                  <img src="assets/img/ln_qr.png" class="img-fluid" alt="Lightning Network QR">
+                  <img src="assets/img/ln_qr.png" class="img-fluid" alt="Lightning Network QR"  width="400" height="400">
 		            </p>
               </div>
             </div>
